--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.15.3",
+    "fuse.js": "^7.1.0",
     "groq-sdk": "^0.19.0",
+    "@supabase/supabase-js": "^2.45.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
